<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_password"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/accPassword1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_here"
        android:padding="10dp"
        android:inputType=""
        android:importantForAutofill="no" tools:targetApi="o"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_password_again"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/accPassword2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_twice_here"
        android:padding="10dp"
        android:importantForAutofill="no" tools:targetApi="o"
        android:inputType=""/>
</LinearLayout>