<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/passwordToUnlock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_here"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:targetApi="o"/>

    <CheckBox
        android:id="@+id/rememberPasswordCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="6"
        android:text="@string/remembor_password"/>

</LinearLayout>