<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/container2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/protonBindEthAddr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="#CED0CF"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/this_is_the_manager_ethereum_account_for_current_proton_address"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:lines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethInfoInMainPage"
        tools:targetApi="o"/>

    <Button
        android:id="@+id/copyEthAddrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="5"
        android:text="@string/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonBindEthAddr"/>

    <ImageButton
        android:id="@+id/serviceSwitch"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="#0d80BD43"
        android:contentDescription="@string/protonserviceswitch"
        android:cropToPadding="true"
        android:drawingCacheQuality="high"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="5dp"
        android:filterTouchesWhenObscured="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:tag="7"
        android:visibility="visible"
        app:layout_anchorGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProtonNetworkStatus"
        app:srcCompat="@drawable/running_off"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#33CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceSwitch"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#33CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createProtonAddrBtn"/>

    <TextView
        android:id="@+id/protonAddrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/proton_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <EditText
        android:id="@+id/protonAddressCurrent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#CED0CF"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/this_is_for_Proton_block_chain_addres"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:lines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/copyProtonAddrBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonAddrLabel"
        tools:targetApi="o"/>

    <TextView
        android:id="@+id/ProtonNetworkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/unconnected"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/copyProtonAddrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="4"
        android:text="@android:string/copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonAddrLabel"/>

    <ProgressBar
        android:id="@+id/waitingTips"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"/>

    <Button
        android:id="@+id/createProtonAddrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="1"
        android:text="@string/createProtonAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonAddressCurrent"/>

    <Button
        android:id="@+id/ImportProtonAddrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="2"
        android:text="@string/ImportProtonAccount"
        app:layout_constraintEnd_toStartOf="@+id/ExportProtonAddrBtn"
        app:layout_constraintStart_toEndOf="@+id/createProtonAddrBtn"
        app:layout_constraintTop_toBottomOf="@+id/protonAddressCurrent"/>

    <Button
        android:id="@+id/ExportProtonAddrBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="3"
        android:text="@string/ExportProtonAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonAddressCurrent"/>

    <Button
        android:id="@+id/AdvanceEthereumOpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="6"
        android:text="@string/ethereumOpt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonBindEthAddr"/>

    <TextView
        android:id="@+id/ethInfoInMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/protonBindedEthAccLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2"/>

    <TextView
        android:id="@+id/protonTipsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#F1F6EC"
        android:inputType="textMultiLine|text"
        android:text="@string/ethOptTips"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyEthAddrBtn"/>

    <Button
        android:id="@+id/EthCopyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="8"
        android:text="@android:string/copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protonBindEthAddr"/>


</android.support.constraint.ConstraintLayout>